update profile picture, add favicon, fix link to project

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <title>Mi portfolio</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <title>Portfolio - Nehuen Cuenca</title>
 </head>
 <body>
     <header>
@@ -24,7 +25,8 @@
         <section id="perfil">
             <h1 class="titulo-seccion">Mi perfil</h1>
             <div class="foto">
-                <img class="img-perfil" src="https://xsgames.co/randomusers/avatar.php?g=male" alt="una foto del desarrollador" loading="eager">
+                <!-- <img class="img-perfil" src="https://xsgames.co/randomusers/avatar.php?g=male" alt="una foto del desarrollador" loading="eager"> -->
+                <img class="img-perfil" src="./assets/nehuen-cuenca-foto.png" alt="Foto de Nehuen Cuenca" loading="eager">
             </div>
             <div class="container-texto">
                 <div class="bio">Recien recibido de tecnico en analista en sistema. Me considero un programador trainee (o un junior wannabe), sin experencia laboral pero con ganas de entrar al mercado para aportar y aprender de los mejores 🤓👆</div>
@@ -60,7 +62,7 @@
                 </figure>
                 <figure class="project-tile">
                     <figcaption>
-                        <a href="https://app.netlify.com/sites/math-minigame-nc/overview" target="_blank">Minijuego de matematicas</a>
+                        <a href="https://math-minigame-nc.netlify.app/" target="_blank">Minijuego de matematicas</a>
                     </figcaption>
                     <img src="https://cerebriti.b-cdn.net/uploads/39bf60c0e3ebc118a4bf6a77c26036b5.jpg" alt="Minijuego de cuentas de matematicas">
                 </figure>
