change email for email work

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         </a>
                     </li>
                     <li class="social">
-                        <a href="mailto:nehuen.cuenca@hotmail.com">
+                        <a href="mailto:nehuen.cuenca@yahoo.com">
                             <i class="social-icon">📮</i>Correo
                         </a>
                     </li>
