change phrase for btn download cv

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             </div>
             <div class="container-texto">
                 <div class="bio">Recien recibido de tecnico en analista en sistema. Me considero un programador trainee (o un junior wannabe), sin experencia laboral pero con ganas de entrar al mercado para aportar y aprender de los mejores 🤓👆</div>
-                <div class="frase">"A la grande le puse cuca." - Homero Simpson</div>
+                <div class="cv">
+                    <a href="./assets/NehuenCuenca-CV-ENG.pdf" download>Descargar CV</a>
+                </div>
             </div>
         </section>
         <section id="projects">
