add new project (rest-countries-api)

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </figure>
                 <figure class="project-tile">
                     <figcaption>
-                        <a href="https://wqznzz.csb.app/" target="_blank">Blog de recetas </a>
+                        <a href="https://wqznzz.csb.app/" target="_blank">Blog de recetas</a>
                     </figcaption>
                     <img src="https://uvn-brightspot.s3.amazonaws.com/assets/vixes/imj/elgranchef/c/como-debe-lucir-un-plato-saludable-9.jpg" alt="Blog de recetas">
                 </figure>
@@ -67,6 +67,12 @@
                         <a href="https://math-minigame-nc.netlify.app/" target="_blank">Minijuego de matematicas</a>
                     </figcaption>
                     <img src="https://cerebriti.b-cdn.net/uploads/39bf60c0e3ebc118a4bf6a77c26036b5.jpg" alt="Minijuego de cuentas de matematicas">
+                </figure>
+                <figure class="project-tile">
+                    <figcaption>
+                        <a href="https://countries-api-vue-nc.netlify.app/" target="_blank">Buscador de paises</a>
+                    </figcaption>
+                    <img src="https://s1.abcstatics.com/media/cultura/2019/09/20/banderas-del-mundo-k0j--1248x698@abc.jpg" alt="Buscador de paises">
                 </figure>
             </div>
         </section>
