add a dropdown menu for the cv, and add cv in inglish and spanish

--- a/index.html
+++ b/index.html
@@ -30,8 +30,15 @@
             </div>
             <div class="container-texto">
                 <div class="bio">Recien recibido de tecnico en analista en sistema. Me considero un programador trainee (o un junior wannabe), sin experencia laboral pero con ganas de entrar al mercado para aportar y aprender de los mejores 🤓👆</div>
-                <div class="cv">
+                <!-- <div class="cv">
                     <a href="./assets/NehuenCuenca-CV-ENG.pdf" download>Descargar CV</a>
+                </div> -->
+                <div class="cv dropdown">
+                    <button class="dropbtn">Descargar CV</button>
+                    <div class="dropdown-content">
+                    <a href="./assets/Nehuen_Cuenca-CV-ESP.pdf" download>Español</a>
+                    <a href="./assets/Nehuen_Cuenca-CV-ENG.pdf" download>Ingles</a>
+                    </div>
                 </div>
             </div>
         </section>
