updated CV's and a link to LinkedIn

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <div class="cv dropdown">
                     <button type="button" class="dropbtn">Descargar CV</button>
                     <div class="dropdown-content">
-                    <a href="./assets/Nehuen_Cuenca-CV-ESP.pdf" download>Español</a>
-                    <a href="./assets/Nehuen_Cuenca-CV-ENG.pdf" download>Ingles</a>
+                    <a href="./assets/Nehuen-Cuenca-CV-ESP.pdf" download>Español</a>
+                    <a href="./assets/Nehuen-Cuenca-CV-ENG.pdf" download>Ingles</a>
                     </div>
                 </div>
             </div>
@@ -139,7 +139,7 @@
                         </a>
                     </li>
                     <li class="social">
-                        <a href="https://www.linkedin.com/in/nehuen-cuenca-287b99245/" target="_blank">
+                        <a href="https://www.linkedin.com/in/nehuen-cuenca/" target="_blank">
                             <i class="social-icon">👷🏽‍♂️</i>LinkedIn
                         </a>
                     </li>
