improve the grammar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <section id="welcome-section">
             <h1>Holis, soy Nehuen Cuenca.</h1>
-            <p>Y soy un intento de desarrollador web 😎.</p>
+            <p>Y quiero ser desarrollador web 😎.</p>
         </section>
         <section id="perfil">
             <h1 class="titulo-seccion">Mi perfil</h1>
@@ -84,7 +84,7 @@
             <h1 class="titulo-seccion">Formacion</h1>
             <p class="comentario">Mi comienzo con la programacion empieza en la tecnicatura en analista en sistemas, donde mi primer lenguaje de programacion fue Pascal, en el cual aprendí las estructuras de datos, bucles y estructuras de control. Tambien vi pero muy por arriba, HTML, CSS y PHP.</p>
             <p class="comentario">En segundo año, usamos <strong>Delphi</strong> en el cual nos enseñaron mas estructuras de datos, tales como pilas, colas y listas. Lenguaje que tambien usé para hacer mi primer proyecto (trataba de una distribuidora de bebidas).</p>
-            <p class="comentario">Finalmente en tercero, me choqué con <strong>Vue.js (v2)</strong> y <strong>Laravel 7</strong>, para los cuales usé para hacer un proyecto sobre la gestion de turnos, clientes y canchas de un club de F5.</p>
+            <p class="comentario">Finalmente en tercero, me choqué con <strong>Vue.js (v2)</strong>, <strong>Laravel 7</strong> y un poco de <strong>Git/GitHub</strong> con los cuales, hice un proyecto en grupo, sobre la gestion de turnos, clientes y canchas de un club de F5.</p>
 
             <div class="container">
                 <h3 class="titulo-container">Cursos y otros...</h3>
