add vue js in courses realized

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <p class="comentario">Finalmente en tercero, me choqué con <strong>Vue.js (v2)</strong>, <strong>Laravel 7</strong> y un poco de <strong>Git/GitHub</strong> con los cuales, hice un proyecto en grupo, sobre la gestion de turnos, clientes y canchas de un club de F5.</p>
 
             <div class="container">
-                <h3 class="titulo-container">Cursos y otros...</h3>
+                <h3 class="titulo-container">Cursos realizados...</h3>
                 <ul class="cursos">
                     <li class="tarjeta-curso">
                         <a target="_blank" href="https://www.udemy.com/certificate/UC-32a6fcd6-dc66-4ab1-8b79-67c2771aece9/" title="Node: De cero a experto">
@@ -100,8 +100,8 @@
                         </a>
                     </li>
                     <li class="tarjeta-curso">
-                        <a target="_blank" href="https://escuelavue.es/cursos/curso-vue/" title="Vue 2 desde cero">
-                            <img src="https://a.storyblok.com/f/87002/1280x720/4ec6383295/aprender-vue-3-escuela-vue.jpg" alt="Vue 2 desde cero">
+                        <a target="_blank" href="https://www.udemy.com/certificate/UC-91e10e05-45c1-4afb-98f1-c4b9b0caaf41/" title="Vue.js: De cero a experto">
+                            <img src="https://pbs.twimg.com/card_img/1628851927164325890/Z6iDCuDB?format=jpg&name=small" alt="Vue.js: De cero a experto">
                         </a>
                     </li>
                     <li class="tarjeta-curso">
@@ -116,7 +116,7 @@
                     </li>
                 </ul>
 
-                <p class="comentario"><u>Proximos cursos</u>: Vue.js 3.</p>
+                <p class="comentario"><u>Proximos cursos</u>: C#.</p>
             </div>
         </section>
         <section id="contacto">
