remove two social links and fix course image

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </li>
                     <li class="tarjeta-curso">
                         <a target="_blank" href="https://www.udemy.com/certificate/UC-91e10e05-45c1-4afb-98f1-c4b9b0caaf41/" title="Vue.js: De cero a experto">
-                            <img src="https://pbs.twimg.com/card_img/1628851927164325890/Z6iDCuDB?format=jpg&name=small" alt="Vue.js: De cero a experto">
+                            <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--I4FWon9Y--/c_imagga_scale,f_auto,fl_progressive,h_900,q_auto,w_1600/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/ll22z8mea106b4vjdjy7.jpeg" alt="Vue.js: De cero a experto">
                         </a>
                     </li>
                     <li class="tarjeta-curso">
@@ -124,18 +124,8 @@
             <div class="container">
                 <ul id="redes">
                     <li class="social">
-                        <a href="https://www.facebook.com/nehue.cuenca/" target="_blank">
-                            <i class="social-icon">👥</i>Facebook
-                        </a>
-                    </li>
-                    <li class="social">
                         <a href="https://github.com/NehuenCuenca" target="_blank" id="profile-link">
                             <i class="social-icon">😽</i>Github
-                        </a>
-                    </li>
-                    <li class="social">
-                        <a href="https://twitter.com/PandobiliCCE" target="_blank">
-                            <i class="social-icon">🦜</i>Twitter
                         </a>
                     </li>
                     <li class="social">
