add buscaminas to projects

--- a/index.html
+++ b/index.html
@@ -44,27 +44,28 @@
             <div class="container-proyectos">
                 <figure class="project-tile">
                     <figcaption>
-                        <a href="https://adviency-nc.netlify.app/dia23.html" target="_blank">Adviency</a>
+                        <a href="https://buscaminas-nc.netlify.app/" target="_blank">Buscaminas</a>
                     </figcaption>
-                    <img src="https://static.vecteezy.com/system/resources/previews/003/058/018/non_2x/blue-christmas-holiday-party-background-happy-new-year-vector.jpg" alt="Proyecto de adviento de navidad">
+                    <img src="https://minesweeper.online/img/homepage/beginner.png" alt="Buscaminas">
                 </figure>
+                
                 <figure class="project-tile">
                     <figcaption>
                         <a href="https://jxphin.csb.app/" target="_blank">Pagina tributo Post Malone</a>
                     </figcaption>
-                    <img src="https://aisvip-a.akamaihd.net/masters/1940015/3200x1800/post-malones-neues-tattoo-jetzt-traegt-er-besondere-initialen-auf-seiner-stirn.jpg" alt="proyecto-en-construccion">
+                    <img src="https://aisvip-a.akamaihd.net/masters/1940015/3200x1800/post-malones-neues-tattoo-jetzt-traegt-er-besondere-initialen-auf-seiner-stirn.jpg" alt="Pagina tributo a Post Malone">
                 </figure>
                 <figure class="project-tile">
                     <figcaption>
-                        <a href="https://memorama-vue-2.netlify.app/ejerciciomemorama" target="_blank">Memorama con Vue 2</a>
+                        <a href="https://memorama-vue-2.netlify.app/ejerciciomemorama" target="_blank">Memorama</a>
                     </figcaption>
-                    <img src="https://az779572.vo.msecnd.net/screens-400/19651788319b43efb5d0e87e2b229d4f_0" alt="Juego memorama con vue 2">
+                    <img src="https://az779572.vo.msecnd.net/screens-400/19651788319b43efb5d0e87e2b229d4f_0" alt="Juego memorama">
                 </figure>
                 <figure class="project-tile">
                     <figcaption>
-                        <a href="https://wqznzz.csb.app/" target="_blank">Blog de recetas</a>
+                        <a href="https://adviency-nc.netlify.app/dia23.html" target="_blank">Adviency</a>
                     </figcaption>
-                    <img src="https://uvn-brightspot.s3.amazonaws.com/assets/vixes/imj/elgranchef/c/como-debe-lucir-un-plato-saludable-9.jpg" alt="Blog de recetas">
+                    <img src="https://static.vecteezy.com/system/resources/previews/003/058/018/non_2x/blue-christmas-holiday-party-background-happy-new-year-vector.jpg" alt="Proyecto de adviento de navidad">
                 </figure>
                 <figure class="project-tile">
                     <figcaption>
