create folder images for the projects section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <img class="img-perfil" src="./assets/nehuen-cuenca-foto.png" alt="Foto de Nehuen Cuenca" loading="eager">
             </div>
             <div class="container-texto">
-                <div class="bio">Recien recibido de tecnico en analista en sistema. Me considero un programador trainee (o un junior wannabe), sin experencia laboral pero con ganas de entrar al mercado para aportar y aprender de los mejores 🤓👆</div>
+                <div class="bio">Recibido de tecnico en analista en sistema. Me considero un programador trainee (o un junior wannabe), sin experencia laboral pero con ganas de entrar al mercado para aportar y aprender de los mejores 🤓👆</div>
                 <div class="cv dropdown">
                     <button type="button" class="dropbtn">Descargar CV</button>
                     <div class="dropdown-content">
@@ -46,38 +46,37 @@
                     <figcaption>
                         <a href="https://buscaminas-nc.netlify.app/" target="_blank">Buscaminas</a>
                     </figcaption>
-                    <img src="https://minesweeper.online/img/homepage/beginner.png" alt="Buscaminas">
+                    <img src="assets/projects/buscaminas.jpg" alt="Buscaminas">
                 </figure>
-                
                 <figure class="project-tile">
                     <figcaption>
                         <a href="https://jxphin.csb.app/" target="_blank">Pagina tributo Post Malone</a>
                     </figcaption>
-                    <img src="https://aisvip-a.akamaihd.net/masters/1940015/3200x1800/post-malones-neues-tattoo-jetzt-traegt-er-besondere-initialen-auf-seiner-stirn.jpg" alt="Pagina tributo a Post Malone">
+                    <img src="assets/projects/postMalonePicture.jpg" alt="Pagina tributo a Post Malone">
                 </figure>
                 <figure class="project-tile">
                     <figcaption>
                         <a href="https://memorama-vue-2.netlify.app/ejerciciomemorama" target="_blank">Memorama</a>
                     </figcaption>
-                    <img src="https://az779572.vo.msecnd.net/screens-400/19651788319b43efb5d0e87e2b229d4f_0" alt="Juego memorama">
+                    <img src="assets/projects/juegoMemorama.jpg" alt="Juego memorama">
                 </figure>
                 <figure class="project-tile">
                     <figcaption>
                         <a href="https://adviency-nc.netlify.app/dia23.html" target="_blank">Adviency</a>
                     </figcaption>
-                    <img src="https://static.vecteezy.com/system/resources/previews/003/058/018/non_2x/blue-christmas-holiday-party-background-happy-new-year-vector.jpg" alt="Proyecto de adviento de navidad">
+                    <img src="assets/projects/adviencyBackground.jpg" alt="Proyecto de adviento de navidad">
                 </figure>
                 <figure class="project-tile">
                     <figcaption>
                         <a href="https://math-minigame-nc.netlify.app/" target="_blank">Minijuego de matematicas</a>
                     </figcaption>
-                    <img src="https://cerebriti.b-cdn.net/uploads/39bf60c0e3ebc118a4bf6a77c26036b5.jpg" alt="Minijuego de cuentas de matematicas">
+                    <img src="assets/projects/cuentasMatematicas.jpg" alt="Minijuego de cuentas de matematicas">
                 </figure>
                 <figure class="project-tile">
                     <figcaption>
                         <a href="https://countries-api-vue-nc.netlify.app/" target="_blank">Buscador de paises</a>
                     </figcaption>
-                    <img src="https://s1.abcstatics.com/media/cultura/2019/09/20/banderas-del-mundo-k0j--1248x698@abc.jpg" alt="Buscador de paises">
+                    <img src="assets/projects/banderasDelMundo.jpg" alt="Buscador de paises">
                 </figure>
             </div>
         </section>
