--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Este es mi primer portfolio web, realizado para la certificacion de Diseño Web Adaptativo Legado en FreeCodeCamp 😁">
     <link rel="stylesheet" href="/styles.css">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <title>Portfolio - Nehuen Cuenca</title>
@@ -91,27 +92,27 @@
                 <ul class="cursos">
                     <li class="tarjeta-curso">
                         <a target="_blank" href="https://www.udemy.com/certificate/UC-32a6fcd6-dc66-4ab1-8b79-67c2771aece9/" title="Node: De cero a experto">
-                            <img src="assets/courses/CursoNodeJs.jpg" alt="Node: De cero a experto">
+                            <img src="assets/courses/CursoNodeJs.webp" alt="Node: De cero a experto">
                         </a>
                     </li>
                     <li class="tarjeta-curso">
                         <a target="_blank" href="https://www.udemy.com/certificate/UC-cf29f609-4ca0-4127-b30b-56006a58d962/" title="JavaScript Moderno Guía Definitiva Construye +20 Proyectos">
-                            <img src="assets/courses/CursoJavascript.jpg" alt="JavaScript Moderno Guía Definitiva Construye +20 Proyectos">
+                            <img src="assets/courses/CursoJavascript.webp" alt="JavaScript Moderno Guía Definitiva Construye +20 Proyectos">
                         </a>
                     </li>
                     <li class="tarjeta-curso">
                         <a target="_blank" href="https://www.udemy.com/certificate/UC-91e10e05-45c1-4afb-98f1-c4b9b0caaf41/" title="Vue.js: De cero a experto">
-                            <img src="assets/courses/CursoVue3.jpg" alt="Vue.js: De cero a experto">
+                            <img src="assets/courses/CursoVue3.webp" alt="Vue.js: De cero a experto">
                         </a>
                     </li>
                     <li class="tarjeta-curso">
                         <a target="_blank" href="https://www.freecodecamp.org/espanol/certification/NehuenCuenca7/responsive-web-design" title="Diseño Web Responsivo Legado">
-                            <img src="assets/courses/CursoFreeCodeCamp.png" alt="Diseño Web Responsivo Legado">
+                            <img src="assets/courses/CursoFreeCodeCamp.webp" alt="Diseño Web Responsivo Legado">
                         </a>
                     </li>
                     <li class="tarjeta-curso">
                         <a target="_blank" href="https://www.udemy.com/certificate/UC-2fadc5d3-9c06-4dd6-a021-855bc89f4447/" title="GIT+GitHub: Todo un sistema de control de versiones de cero">
-                            <img src="assets/courses/CursoGitGithub.jpg" alt="GIT+GitHub: Todo un sistema de control de versiones de cero">
+                            <img src="assets/courses/CursoGitGithub.webp" alt="GIT+GitHub: Todo un sistema de control de versiones de cero">
                         </a>
                     </li>
                 </ul>
