add the webp images on project section and fix color contrast on footer

--- a/index.html
+++ b/index.html
@@ -47,37 +47,37 @@
                     <figcaption>
                         <a href="https://buscaminas-nc.netlify.app/" target="_blank">Buscaminas</a>
                     </figcaption>
-                    <img src="assets/projects/buscaminas.jpg" alt="Buscaminas">
+                    <img src="assets/projects/buscaminas.webp" alt="Buscaminas">
                 </figure>
                 <figure class="project-tile">
                     <figcaption>
                         <a href="https://jxphin.csb.app/" target="_blank">Pagina tributo Post Malone</a>
                     </figcaption>
-                    <img src="assets/projects/postMalonePicture.jpg" alt="Pagina tributo a Post Malone">
+                    <img src="assets/projects/postMalonePicture.webp" alt="Pagina tributo a Post Malone">
                 </figure>
                 <figure class="project-tile">
                     <figcaption>
                         <a href="https://memorama-vue-2.netlify.app/ejerciciomemorama" target="_blank">Memorama</a>
                     </figcaption>
-                    <img src="assets/projects/juegoMemorama.jpg" alt="Juego memorama">
+                    <img src="assets/projects/juegoMemorama.webp" alt="Juego memorama">
                 </figure>
                 <figure class="project-tile">
                     <figcaption>
                         <a href="https://adviency-nc.netlify.app/dia23.html" target="_blank">Adviency</a>
                     </figcaption>
-                    <img src="assets/projects/adviencyBackground.jpg" alt="Proyecto de adviento de navidad">
+                    <img src="assets/projects/adviencyBackground.webp" alt="Proyecto de adviento de navidad">
                 </figure>
                 <figure class="project-tile">
                     <figcaption>
                         <a href="https://math-minigame-nc.netlify.app/" target="_blank">Minijuego de matematicas</a>
                     </figcaption>
-                    <img src="assets/projects/cuentasMatematicas.jpg" alt="Minijuego de cuentas de matematicas">
+                    <img src="assets/projects/cuentasMatematicas.webp" alt="Minijuego de cuentas de matematicas">
                 </figure>
                 <figure class="project-tile">
                     <figcaption>
                         <a href="https://countries-api-vue-nc.netlify.app/" target="_blank">Buscador de paises</a>
                     </figcaption>
-                    <img src="assets/projects/banderasDelMundo.jpg" alt="Buscador de paises">
+                    <img src="assets/projects/banderasDelMundo.webp" alt="Buscador de paises">
                 </figure>
             </div>
         </section>
