change all sections color, add contrast on font, fix overflow img on projects

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <img class="img-perfil" src="./assets/nehuen-cuenca-foto.png" alt="Foto de Nehuen Cuenca" loading="eager">
             </div>
             <div class="container-texto">
-                <div class="bio">Recibido de tecnico en analista en sistema. Me considero un programador trainee (o un junior wannabe), sin experencia laboral pero con ganas de entrar al mercado para aportar y aprender de los mejores 🤓👆</div>
+                <p class="bio">Recibido de tecnico en analista en sistema. Me considero un programador trainee (o un junior wannabe), sin experencia laboral pero con ganas de entrar al mercado para aportar y aprender de los mejores 🤓👆</p>
                 <div class="cv dropdown">
                     <button type="button" class="dropbtn">Descargar CV</button>
                     <div class="dropdown-content">
@@ -120,22 +120,22 @@
             </div>
         </section>
         <section id="contacto">
-            <h3 class="titulo-seccion">Rompete un mensajito :P</h3>
+            <h3 class="titulo-seccion">Contactame por acá :P</h3>
             <div class="container">
                 <ul id="redes">
                     <li class="social">
                         <a href="https://github.com/NehuenCuenca" target="_blank" id="profile-link">
-                            <i class="social-icon">😽</i>Github
+                            <i class="social-icon">😽</i><u>Github</u>
                         </a>
                     </li>
                     <li class="social">
                         <a href="https://www.linkedin.com/in/nehuen-cuenca/" target="_blank">
-                            <i class="social-icon">👷🏽‍♂️</i>LinkedIn
+                            <i class="social-icon">👷🏽‍♂️</i><u>LinkedIn</u>
                         </a>
                     </li>
                     <li class="social">
                         <a href="mailto:nehuen.cuenca@yahoo.com">
-                            <i class="social-icon">📮</i>Correo
+                            <i class="social-icon">📮</i><u>Correo</u>
                         </a>
                     </li>
                 </ul>
