change like button on the footer

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </main>
     <footer id="footer">
         <p>Bueno chavales este fue mi portfolio, dejad un pedazo de like, clickeando el pulgar!!1</p>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">👍🏽</a>
+        <a href="https://www.linkedin.com/in/nehuen-cuenca/" target="_blank">👍🏽</a>
     </footer>
 </body>
 </html>
